// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/AuthorsActionMenu when rendered with authorsFilterWithoutFilteredAuthors it should match snapshot 1`] = `
<ActionMenu
  style={
    Object {
      "color": "#333333",
      "fontSize": 13,
      "fontWeight": "normal",
      "position": "absolute",
      "right": 10,
    }
  }
>
  <div
    style={
      Object {
        "color": "#333333",
        "fontSize": 14,
        "fontWeight": "normal",
        "marginBottom": 10,
        "marginRight": 10,
      }
    }
  >
    View
  </div>
  <RadioMenuItem
    isSelected={false}
    onClick={[Function]}
    testId="allAuthors"
  >
    All Authors
  </RadioMenuItem>
  <RadioMenuItem
    disabled={true}
    isSelected={true}
    onClick={[Function]}
    testId="filteredAuthors"
  >
    Filtered Authors
  </RadioMenuItem>
  <div
    style={
      Object {
        "color": "#333333",
        "fontSize": 14,
        "fontWeight": "normal",
        "marginBottom": 10,
        "marginRight": 10,
      }
    }
  >
    Sort
  </div>
  <RadioMenuItem
    isSelected={true}
    onClick={[Function]}
    testId="sortTime"
  >
    by time
  </RadioMenuItem>
  <RadioMenuItem
    isSelected={false}
    onClick={[Function]}
    testId="sortCommits"
  >
    by number of commits
  </RadioMenuItem>
  <RadioMenuItem
    isSelected={false}
    onClick={[Function]}
    testId="sortLines"
  >
    by lines changed
  </RadioMenuItem>
  <div
    style={
      Object {
        "borderBottom": "2px solid whitesmoke",
        "marginBottom": 10,
      }
    }
  />
  <MenuItem
    disabled={true}
    onClick={[Function]}
    testId="removeAllAuthorFilters"
  >
    Remove All Author Filters
  </MenuItem>
</ActionMenu>
`;

exports[`containers/AuthorsActionMenu when rendered with basic props it should match snapshot 1`] = `
<ActionMenu
  style={
    Object {
      "color": "#333333",
      "fontSize": 13,
      "fontWeight": "normal",
      "position": "absolute",
      "right": 10,
    }
  }
>
  <div
    style={
      Object {
        "color": "#333333",
        "fontSize": 14,
        "fontWeight": "normal",
        "marginBottom": 10,
        "marginRight": 10,
      }
    }
  >
    View
  </div>
  <RadioMenuItem
    isSelected={true}
    onClick={[Function]}
    testId="allAuthors"
  >
    All Authors
  </RadioMenuItem>
  <RadioMenuItem
    disabled={true}
    isSelected={false}
    onClick={[Function]}
    testId="filteredAuthors"
  >
    Filtered Authors
  </RadioMenuItem>
  <div
    style={
      Object {
        "color": "#333333",
        "fontSize": 14,
        "fontWeight": "normal",
        "marginBottom": 10,
        "marginRight": 10,
      }
    }
  >
    Sort
  </div>
  <RadioMenuItem
    isSelected={true}
    onClick={[Function]}
    testId="sortTime"
  >
    by time
  </RadioMenuItem>
  <RadioMenuItem
    isSelected={false}
    onClick={[Function]}
    testId="sortCommits"
  >
    by number of commits
  </RadioMenuItem>
  <RadioMenuItem
    isSelected={false}
    onClick={[Function]}
    testId="sortLines"
  >
    by lines changed
  </RadioMenuItem>
  <div
    style={
      Object {
        "borderBottom": "2px solid whitesmoke",
        "marginBottom": 10,
      }
    }
  />
  <MenuItem
    disabled={true}
    onClick={[Function]}
    testId="removeAllAuthorFilters"
  >
    Remove All Author Filters
  </MenuItem>
</ActionMenu>
`;

exports[`containers/AuthorsActionMenu when rendered with filteredAuthors and authorsContainerFilter=FILTERED it should match snapshot 1`] = `
<ActionMenu
  style={
    Object {
      "color": "#333333",
      "fontSize": 13,
      "fontWeight": "normal",
      "position": "absolute",
      "right": 10,
    }
  }
>
  <div
    style={
      Object {
        "color": "#333333",
        "fontSize": 14,
        "fontWeight": "normal",
        "marginBottom": 10,
        "marginRight": 10,
      }
    }
  >
    View
  </div>
  <RadioMenuItem
    isSelected={false}
    onClick={[Function]}
    testId="allAuthors"
  >
    All Authors
  </RadioMenuItem>
  <RadioMenuItem
    disabled={false}
    isSelected={true}
    onClick={[Function]}
    testId="filteredAuthors"
  >
    Filtered Authors
  </RadioMenuItem>
  <div
    style={
      Object {
        "color": "#333333",
        "fontSize": 14,
        "fontWeight": "normal",
        "marginBottom": 10,
        "marginRight": 10,
      }
    }
  >
    Sort
  </div>
  <RadioMenuItem
    isSelected={true}
    onClick={[Function]}
    testId="sortTime"
  >
    by time
  </RadioMenuItem>
  <RadioMenuItem
    isSelected={false}
    onClick={[Function]}
    testId="sortCommits"
  >
    by number of commits
  </RadioMenuItem>
  <RadioMenuItem
    isSelected={false}
    onClick={[Function]}
    testId="sortLines"
  >
    by lines changed
  </RadioMenuItem>
  <div
    style={
      Object {
        "borderBottom": "2px solid whitesmoke",
        "marginBottom": 10,
      }
    }
  />
  <MenuItem
    disabled={false}
    onClick={[Function]}
    testId="removeAllAuthorFilters"
  >
    Remove All Author Filters
  </MenuItem>
</ActionMenu>
`;
